<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="app_name">小米WiFi链</string>
    <string name="block">米粒</string>
    <string name="block_record">米粒记录</string>
    <string name="common_and">和</string>
    <string name="common_app_name">小米WiFi链</string>
    <string name="common_attention">注意</string>
    <string name="common_cancel">取消</string>
    <string name="common_clear">清除</string>
    <string name="common_close">关闭</string>
    <string name="common_coming_soon">敬请期待</string>
    <string name="common_commit_button">提交</string>
    <string name="common_complete">完成</string>
    <string name="common_concat_s">的</string>
    <string name="common_continue_button">继续</string>
    <string name="common_delete">删除</string>
    <string name="common_finish">完成</string>
    <string name="common_go_setting">去设置</string>
    <string name="common_hint">提示</string>
    <string name="common_i_know_button">我知道了</string>
    <string name="common_ignore">忽略</string>
    <string name="common_know_button">知道了</string>
    <string name="common_load_data">加载数据中…</string>
    <string name="common_load_data_again">加载数据中，请稍后重试</string>
    <string name="common_load_data_fail">加载数据失败,请稍后重试</string>
    <string name="common_network_failure">网络错误</string>
    <string name="common_network_unavailable">当前网络不可用</string>
    <string name="common_next_step">下一步</string>
    <string name="common_no_more">没有更多</string>
    <string name="common_ok_button">确定</string>
    <string name="common_ok_button_2">好的</string>
    <string name="common_operating">正在操作</string>
    <string name="common_prev_step">上一步</string>
    <string name="common_refresh">刷新</string>
    <string name="common_refreshing">载入中…</string>
    <string name="common_refreshing_no_point">载入中</string>
    <string name="common_refreshing_retry">加载失败，请重试</string>
    <string name="common_retry_button">重试</string>
    <string name="common_search">搜索</string>
    <string name="common_searching">搜索中…</string>
    <string name="common_share_qqzone">QQ空间</string>
    <string name="common_share_weibo">微博</string>
    <string name="common_share_weixin">微信</string>
    <string name="common_share_weixin_friends">微信朋友圈</string>
    <string name="common_unknown_error">未知错误</string>
    <string name="cube_ptr_hours_ago"> hours ago</string>
    <string name="cube_ptr_last_update">last update: </string>
    <string name="cube_ptr_minutes_ago"> minutes ago</string>
    <string name="cube_ptr_pull_down">Pull Down</string>
    <string name="cube_ptr_pull_down_to_refresh">Pull Down to Refresh</string>
    <string name="cube_ptr_refresh_complete">Updated.</string>
    <string name="cube_ptr_refreshing">Updating...</string>
    <string name="cube_ptr_release_to_refresh">Release To Refresh</string>
    <string name="cube_ptr_seconds_ago"> seconds ago</string>
    <string name="exchange">兑换</string>
    <string name="feedback">用户反馈</string>
    <string name="feedback_advise">问题建议</string>
    <string name="feedback_app_succ_device_fail">用户上传APP日志成功</string>
    <string name="feedback_contact">联系方式</string>
    <string name="feedback_contact_max_length">联系方式需要在100字以内</string>
    <string name="feedback_content_description">请输入手机号或电子邮件</string>
    <string name="feedback_content_max_length">请精简内容，反馈自动截取前1000字</string>
    <string name="feedback_error">用户反馈失败，请重试</string>
    <string name="feedback_input_contact">请输入联系方式</string>
    <string name="feedback_input_content">请输入问题建议</string>
    <string name="feedback_send_log">上传问题日志以帮助我们尽快解决问题</string>
    <string name="feedback_shotscreen">问题截图(选填)</string>
    <string name="feedback_succ">用户反馈成功</string>
    <string name="feedback_uploading">正在发送用户反馈</string>
    <string name="get_growth_factor">获取生长因子</string>
    <string name="growth_factor">生长因子</string>
    <string name="invitation_desc">"如果有邀请码
填写后你和邀请方都可获取生长因子"</string>
    <string name="invitation_input_code"><font size="18">请输入邀请码</font></string>
    <string name="invitation_name_code">%s 的邀请码</string>
    <string name="login_confirm_1">确认已阅读</string>
    <string name="login_confirm_2">《用户协议》</string>
    <string name="login_confirm_3">和</string>
    <string name="login_confirm_4">《隐私协议》</string>
    <string name="login_failed">登录失败</string>
    <string name="login_loading">正在登录</string>
    <string name="login_mi_oauth">授权登录</string>
    <string name="login_privacy_protocol">隐私协议</string>
    <string name="login_protocol_prefix">登录则表示您同意遵守小爱音箱的</string>
    <string name="login_success">登录成功</string>
    <string name="login_system_account_found">检测到系统小米帐号</string>
    <string name="login_use_local">使用其他帐号</string>
    <string name="login_use_system">直接登录</string>
    <string name="login_user_protocol">用户协议</string>
    <string name="login_welcome">欢迎使用小爱音箱</string>
    <string name="main_handle_account_exception">发现帐号异常，请重新登录</string>
    <string name="mine_confirm_1"><u>用户协议</u></string>
    <string name="mine_confirm_2">与</string>
    <string name="mine_confirm_3"><u>隐私协议</u></string>
    <string name="mine_unlogin_desc">登录才可以领取米粒哦</string>
    <string name="mine_unlogin_name">登录帐户</string>
    <string name="new_feature_text_1">加入WiFi链，赚取专属回报</string>
    <string name="new_feature_text_2">如何赚取回报</string>
    <string name="new_feature_text_3">你的收获</string>
    <string name="passport_access_denied">Access denied</string>
    <string name="passport_account_hint_text">Email address, phone number or Mi Account ID</string>
    <string name="passport_account_identity_title">Verify your identity</string>
    <string name="passport_account_label">Mi Account</string>
    <string name="passport_account_name">Account: %1$s</string>
    <string name="passport_account_not_activated">"Account hasn't been activated"</string>
    <string name="passport_account_not_actived">"Your account hasn't been activated"</string>
    <string name="passport_account_set_password">Set password</string>
    <string name="passport_account_set_password_prompt">Set the password for your account to sign in next time.</string>
    <string name="passport_account_set_password_title">Set password</string>
    <string name="passport_active_email_visit">Check your inbox at %s</string>
    <string name="passport_activing_account">Activating…</string>
    <string name="passport_adding_account">Adding account…</string>
    <string name="passport_area_code_hot">FREQUENTLY USED</string>
    <string name="passport_area_code_title">Country code</string>
    <string name="passport_auto_generate_pwd">Generate secure password</string>
    <string name="passport_back">Back</string>
    <string name="passport_bad_authentication">Invalid username or password</string>
    <string name="passport_barcode_add_account_prompt">To connect an account, scan the QR code again after you sign in.</string>
    <string name="passport_change_account"><u>Change account</u></string>
    <string name="passport_change_phone_number">Switch numbers</string>
    <string name="passport_checking_account">Checking password…</string>
    <string name="passport_checking_input">Checking input…</string>
    <string name="passport_click_email_to_valid">"

To activate your account, follow the 
 link we've sent to your inbox."</string>
    <string name="passport_completed">Finish</string>
    <string name="passport_confirm_recycle_account">Yes</string>
    <string name="passport_confirm_recycle_account_msg">%s &lt;font color=Red>疑似&lt;/font>是运营商回收后再次收买的号码，该号码下已有小米帐号，这个帐号是你的吗？</string>
    <string name="passport_continue">Continue</string>
    <string name="passport_copy_message_text_success">Copied successfully</string>
    <string name="passport_copy_message_vcode">Copy code</string>
    <string name="passport_delete_account">Sign out</string>
    <string name="passport_downlink_reg">Create account using phone number</string>
    <string name="passport_email">Email address</string>
    <string name="passport_email_or_id_hint_text">Email address or Mi Account ID</string>
    <string name="passport_email_reg_success_summary">%1$s has been bound with your account. You can use it to sign in or to reset your password.</string>
    <string name="passport_error_auth_fail">Session expired, sign in again later</string>
    <string name="passport_error_device_id">"Can't get device id"</string>
    <string name="passport_error_dup_email">The email you entered is already associated with another account.</string>
    <string name="passport_error_email">The email address you entered is invalid</string>
    <string name="passport_error_empty_captcha_code">Enter captcha</string>
    <string name="passport_error_empty_email">Enter your email address</string>
    <string name="passport_error_empty_phone_num">Enter phone number</string>
    <string name="passport_error_empty_pwd">Enter your password</string>
    <string name="passport_error_empty_username">Enter your account ID</string>
    <string name="passport_error_empty_vcode">Enter verification code</string>
    <string name="passport_error_illegal_pwd">Invalid password</string>
    <string name="passport_error_invalid_dev_id">"Your device's ID is invalid."</string>
    <string name="passport_error_invalid_phone_num">Invalid phone number</string>
    <string name="passport_error_login">"Couldn't sign in"</string>
    <string name="passport_error_network">"Can't connect to network"</string>
    <string name="passport_error_no_password_user">"You haven't set the password yet. Sign in with SMS."</string>
    <string name="passport_error_phone_error">Invalid phone number</string>
    <string name="passport_error_server">Server error</string>
    <string name="passport_error_sim_not_ready">"Can't find SIM card"</string>
    <string name="speed_up">加速</string>
</resources>